<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DatosEntrenador">

    <TextView
            android:text="@string/fechaNacimiento"
            android:layout_width="112dp"
            android:layout_height="44dp"
            android:id="@+id/fechaNacimiento"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/txt_apellidosEntrenador"
            android:textColor="@android:color/background_dark" android:textStyle="bold"/>
    <TextView
            android:text="@string/numeroMedallas"
            android:layout_width="118dp"
            android:layout_height="44dp"
            android:id="@+id/numeroMedallas"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@+id/fechaNacimiento" android:layout_marginTop="30dp"
            android:textColor="@android:color/background_dark" android:textStyle="bold"/>
    <TextView
            android:text="@string/campeonActual"
            android:layout_width="114dp"
            android:layout_height="31dp"
            android:id="@+id/campeonActual"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@+id/numeroMedallas" android:layout_marginTop="30dp"
            android:textColor="@android:color/background_dark" android:textStyle="bold"/>
    <TextView
            android:text="@string/txt_apellidosEntrenador"
            android:layout_width="114dp"
            android:layout_height="31dp"
            android:id="@+id/txt_apellidosEntrenador"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/txt_nombresEntrenador"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/txt_nombresEntrenador"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:id="@+id/txt_nombresEntrenador"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.096"
            android:textColor="@android:color/background_dark" android:textStyle="bold"/>
    <Button
            android:text="@string/btn_gestionarEntrenador"
            android:layout_width="129dp"
            android:layout_height="65dp"
            android:id="@+id/btn_gestionarEntrenador" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_eliminarEntrenador" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.333"
            android:layout_marginStart="60dp"/>
    <Button
            android:text="@string/btn_eliminar"
            android:layout_width="127dp"
            android:layout_height="63dp"
            android:id="@+id/btn_eliminarEntrenador"
            app:layout_constraintTop_toBottomOf="@+id/campeonActual" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp" android:layout_marginTop="60dp"/>
    <Button
            android:text="@string/btn_crearEntrenador"
            android:layout_width="128dp"
            android:layout_height="66dp"
            android:id="@+id/btn_crearEntrenador" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_actualizaEntrenador"
            app:layout_constraintStart_toEndOf="@+id/btn_gestionarEntrenador"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.348" app:layout_constraintVertical_bias="0.33"/>
    <Button
            android:text="@string/btn_actualizar"
            android:layout_width="133dp"
            android:layout_height="64dp"
            android:id="@+id/btn_actualizaEntrenador" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btn_eliminarEntrenador" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.306" app:layout_constraintTop_toBottomOf="@+id/sw_campeonActual_act"
            android:layout_marginTop="60dp"/>
    <EditText
            android:layout_width="176dp"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombresEntrenador_act"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/txt_nombresEntrenador"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.106"/>
    <EditText
            android:layout_width="176dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellidosEntrenador_act"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombresEntrenador_act" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/txt_apellidosEntrenador"
            android:layout_marginStart="8dp" android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.406"/>
    <EditText
            android:layout_width="175dp"
            android:layout_height="39dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/fechaNacimiento_act"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellidosEntrenador_act"
            app:layout_constraintStart_toEndOf="@+id/fechaNacimiento" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.437"/>
    <EditText
            android:layout_width="177dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_numeroMedallas_act"
            app:layout_constraintStart_toEndOf="@+id/numeroMedallas" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.383" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/fechaNacimiento_act"/>
    <Switch
            android:layout_width="108dp"
            android:layout_height="17dp"
            android:id="@+id/sw_campeonActual_act" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txt_numeroMedallas_act" android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/campeonActual" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.403"/>
</android.support.constraint.ConstraintLayout>